--- a/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
+++ b/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
@@ -52,6 +52,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="pb_del_device">
+           <property name="text">
+            <string>删除设备</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="pb_save_device">
            <property name="text">
             <string>保存设备</string>
@@ -81,7 +88,7 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QLineEdit" name="lineEdit_3"/>
+            <widget class="QLineEdit" name="le_big_item"/>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_10">
@@ -91,7 +98,7 @@
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QLineEdit" name="lineEdit_2"/>
+            <widget class="QLineEdit" name="le_dev_model"/>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_3">
@@ -101,7 +108,7 @@
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="QLineEdit" name="lineEdit"/>
+            <widget class="QLineEdit" name="le_com_port"/>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_4">
