--- a/kdCarCheckDevSimulator/cmd.ui
+++ b/kdCarCheckDevSimulator/cmd.ui
@@ -70,6 +70,9 @@
      <property name="text">
       <string>全部响应</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
      <attribute name="buttonGroup">
       <string notr="true">buttonGroup</string>
      </attribute>
