--- a/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
+++ b/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
@@ -65,6 +65,19 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="pb_direct_reply">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>发送响应</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
@@ -118,7 +131,14 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="QSpinBox" name="spinBox_2"/>
+            <widget class="QSpinBox" name="spinBox_2">
+             <property name="maximum">
+              <number>99000</number>
+             </property>
+             <property name="value">
+              <number>9600</number>
+             </property>
+            </widget>
            </item>
            <item row="4" column="0">
             <widget class="QLabel" name="label_5">
@@ -128,7 +148,11 @@
             </widget>
            </item>
            <item row="4" column="1">
-            <widget class="QSpinBox" name="spinBox"/>
+            <widget class="QSpinBox" name="spinBox">
+             <property name="value">
+              <number>8</number>
+             </property>
+            </widget>
            </item>
            <item row="5" column="0">
             <widget class="QLabel" name="label_6">
@@ -138,7 +162,21 @@
             </widget>
            </item>
            <item row="5" column="1">
-            <widget class="QSpinBox" name="spinBox_3"/>
+            <widget class="QSpinBox" name="spinBox_3">
+             <property name="value">
+              <number>1</number>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>直接发送响应</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
+            <widget class="QLineEdit" name="le_direct_reply"/>
            </item>
           </layout>
          </item>
