--- a/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
+++ b/kdCarCheckDevSimulator/kdCarCheckDevSimulator.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>868</width>
     <height>600</height>
    </rect>
   </property>
@@ -176,7 +176,11 @@
             </widget>
            </item>
            <item row="6" column="1">
-            <widget class="QLineEdit" name="le_direct_reply"/>
+            <widget class="QLineEdit" name="le_direct_reply">
+             <property name="text">
+              <string>45 4E 44 0D</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -302,7 +306,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>868</width>
      <height>23</height>
     </rect>
    </property>
